sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:13: error: ';' expected but integer literal found.
    }fin -= 1
            ^